--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,1 @@
-* linguist-vendored
-* linguist-generated
-* linguist-detectable
-* linguist-documentation
-
-!(*.go|*.yaml) linguist-generated linguist-detectable
-*.go linguist-language=Go
-*.yaml linguist-language=YAML
+* !$go_extension linguist-language=Go
