--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,12 @@
-* !$go_extension linguist-language=Go
+# Disable language detection for all files
+* linguist-detectable=false
+
+# Enable language detection for YAML files
+*.yml linguist-detectable=true
+*.yaml linguist-detectable=true
+*.go linguist-detectable=true
+
+# Set YAML files to be treated as YAML
+*.yml linguist-language=YAML
+*.yaml linguist-language=YAML
+*.yaml linguist-language=Go
