--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build and push Docker image # build the Docker image and push it to ECR
         env:
-          AWS_REGION: us-west-2 # specify the AWS region
+          AWS_REGION: eu-west-2 # specify the AWS region
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # access key for AWS
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # secret access key for AWS
         run: |
