--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,8 +37,8 @@ env:
   ECS_CLUSTER: trivoh-prod-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: deployment.yaml # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: trivoheks/eks/goapp           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  CONTAINER_NAME: trivoheks/eks/goapp          # set this to the name of the container in the
+  IMAGE_TAG: latest                                             # containerDefinitions section of your task definition
 
 permissions:
   contents: read
