Updated ci/cd aws.yml

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,9 +31,9 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: eu-west-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: trivoheks           # set this to your Amazon ECR repository name
-  ECS_SERVICE: dkr.ecr.eu-west-2.amazonaws.com/trivoheks                 # set this to your Amazon ECS service name
+  AWS_REGION: eu-west-2                                                               # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: trivoheks                                                           # set this to your Amazon ECR repository name
+  ECS_SERVICE: 905418116413.dkr.ecr.eu-west-2.amazonaws.com/trivoheks                 # set this to your Amazon ECS service name
   ECS_CLUSTER: trivoh-prod-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: deployment.yaml # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
