--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,6 +15,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
+      with:
+        version: 'v1.29.0' # default is latest stable
+      id: install
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
