--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,6 +3,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+env:
+  ECR_REPOSITORY: trivoheks
+  EKS_CLUSTER_NAME: trivoh-prod-cluster
+  AWS_REGION: eu-west-2
 
 name: AWS ECR push
 
@@ -44,3 +48,21 @@ jobs:
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+
+    
+      # Delete existing deployment in order to avoid any conflicts,
+    - name: Delete Existing Resources
+      run: |
+        kubectl delete deployment trivohdemo --namespace trivoh
+        
+    - name: Deploy to EKS
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
+        IMAGE_TAG: ${{ steps.commit.outputs.short }}
+        
+      run: |
+        kubectl apply -f deployment.yaml --namespace trivoh
+        #kubectl apply -f manifests/hello-app-service.yaml
