--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -64,5 +64,6 @@ jobs:
         IMAGE_TAG: ${{ steps.commit.outputs.short }}
         
       run: |
+        sed -i.bak "s|DOCKER_IMAGE|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" deployment.yaml
         kubectl apply -f deployment.yaml --namespace trivoh
         #kubectl apply -f manifests/hello-app-service.yaml
